--- a/coffee.html
+++ b/coffee.html
@@ -1,1 +1,4 @@
 <script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/3349_RC01/embed_loader.js"></script> <script type="text/javascript"> trends.embed.renderExploreWidget("TIMESERIES", {"comparisonItem":[{"keyword":"café","geo":"BR","time":"today 12-m"}],"category":0,"property":""}, {"exploreQuery":"geo=BR&q=caf%C3%A9&hl=pt&date=today 12-m","guestPath":"https://trends.google.com.br:443/trends/embed/"}); </script>
+
+<script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/3349_RC01/embed_loader.js"></script> <script type="text/javascript"> trends.embed.renderExploreWidget("GEO_MAP", {"comparisonItem":[{"keyword":"café","geo":"BR","time":"today 12-m"}],"category":0,"property":""}, {"exploreQuery":"geo=BR&q=caf%C3%A9&hl=pt&date=today 12-m","guestPath":"https://trends.google.com.br:443/trends/embed/"}); </script>
+
