--- a/age-calculation.html
+++ b/age-calculation.html
@@ -2,6 +2,11 @@
 <html>
 <head>
   <title>Calculadora de Idade</title>
+  <style>
+    body {
+      background-color: #ffffff; /* Código hexadecimal para a cor branca */
+    }
+  </style>
   <script>
     function calcularIdade() {
       var dataNascimento = document.getElementById('dataNascimento').value;
