--- a/age-calculation-fix.html
+++ b/age-calculation-fix.html
@@ -2,6 +2,11 @@
 <html>
 <head>
   <title>Timer e Idade</title>
+  <style>
+    body {
+      background-color: #ffffff; /* Código hexadecimal para a cor branca */
+    }
+  </style>
   <script>
     function calcularIdade() {
       var dataNascimento = new Date(2023, 2, 9);
