--- a/age-calculation-fix-2.html
+++ b/age-calculation-fix-2.html
@@ -28,37 +28,43 @@
     }
   </style>
   <script>
-    function calcularTempoDecorrido() {
-      var dataNascimento = new Date(2023, 2, 9);
-      var dataAtual = new Date();
+    function formatTime(number) {
+      return number.toString().padStart(2, '0');
+    }
 
-      var diferencaTempo = dataAtual.getTime() - dataNascimento.getTime();
+    function updateTimer() {
+      var dataAtual = new Date();
+      var diferencaTempo = dataAtual.getTime() - startTime.getTime();
 
       var segundos = Math.floor(diferencaTempo / 1000) % 60;
       var minutos = Math.floor(diferencaTempo / 1000 / 60) % 60;
       var horas = Math.floor(diferencaTempo / 1000 / 60 / 60) % 24;
       var dias = Math.floor(diferencaTempo / 1000 / 60 / 60 / 24);
-      
-      document.getElementById('dias').textContent = dias;
-      document.getElementById('horas').textContent = horas;
-      document.getElementById('minutos').textContent = minutos;
-      document.getElementById('segundos').textContent = segundos;
+      var meses = Math.floor(diferencaTempo / 1000 / 60 / 60 / 24 / 30.436875); // Média de dias por mês
+      var anos = Math.floor(meses / 12);
+
+      document.getElementById('anos').textContent = formatTime(anos);
+      document.getElementById('meses').textContent = formatTime(meses);
+      document.getElementById('dias').textContent = formatTime(dias);
+      document.getElementById('horas').textContent = formatTime(horas);
+      document.getElementById('minutos').textContent = formatTime(minutos);
+      document.getElementById('segundos').textContent = formatTime(segundos);
     }
-    
-    setInterval(calcularTempoDecorrido, 1000);
+
+    var startTime = new Date();
+    setInterval(updateTimer, 1000);
   </script>
 </head>
 <body>
   <div class="timer-widget">
     <h1>Tempo Decorrido</h1>
     <div class="timer-value">
-      <span id="dias">0</span> dias
-      <span id="horas">0</span> horas
-      <span id="minutos">0</span> minutos
-      <span id="segundos">0</span> segundos
-    </div>
-    <div class="timer-label">
-      desde 09/03/2023
+      <span id="anos">00</span> anos
+      <span id="meses">00</span> meses
+      <span id="dias">00</span> dias
+      <span id="horas">00</span> horas
+      <span id="minutos">00</span> minutos
+      <span id="segundos">00</span> segundos
     </div>
   </div>
 </body>
