--- a/age-calculation-fix-2.html
+++ b/age-calculation-fix-2.html
@@ -28,10 +28,6 @@
     }
   </style>
   <script>
-    function formatTime(number) {
-      return number.toString().padStart(2, '0');
-    }
-
     function calcularTempoDecorrido() {
       var dataNascimento = new Date(2023, 2, 9);
       var dataAtual = new Date();
@@ -66,7 +62,7 @@
       <span id="segundos">0</span> segundos
     </div>
     <div class="timer-label">
-      desde 09/03/2023
+      Desde 09/03/2023
     </div>
   </div>
 </body>
