--- a/age-calculation-fix-2.html
+++ b/age-calculation-fix-2.html
@@ -64,7 +64,7 @@
 </head>
 <body>
   <div class="widget-container">
-    <h1 class="widget-title">Idade e Timer</h1>
+    <h1 class="widget-title">Idade e Timer Elisa B. Krüger</h1>
     <div class="timer-value">
       <span id="anos">00</span> anos
       <span id="meses">00</span> meses
