--- a/age-calculation-2.html
+++ b/age-calculation-2.html
@@ -70,6 +70,8 @@
       document.getElementById('minutos').textContent = formatTime(minutos);
       document.getElementById('segundos').textContent = formatTime(segundos);
     }
+    
+    setInterval(updateTimer, 1000);
   </script>
 </head>
 <body>
