--- a/age-calculation-2.html
+++ b/age-calculation-2.html
@@ -53,7 +53,7 @@
       return number.toString().padStart(2, '0');
     }
 
-    function updateTimer(dataNascimento) {
+    function updateTimer() {
       var dataAtual = new Date();
       var diferencaTempo = dataAtual.getTime() - dataNascimento.getTime();
 
@@ -72,6 +72,7 @@
       document.getElementById('segundos').textContent = formatTime(segundos);
     }
     
+    var = startTime = new Date();
     setInterval(updateTimer, 1000);
   </script>
 </head>
