--- a/age-calculation-2.html
+++ b/age-calculation-2.html
@@ -72,7 +72,7 @@
       document.getElementById('segundos').textContent = formatTime(segundos);
     }
     
-    var = startTime = new Date();
+    //var = startTime = new Date();
     setInterval(updateTimer, 1000);
   </script>
 </head>
