--- a/age-calculation-3.html
+++ b/age-calculation-3.html
@@ -84,22 +84,27 @@
       document.getElementById('idade').textContent = idadeTexto;
     }
 
-    function startTimer() {
-      var startDate = new Date();
-      setInterval(function() {
-        var currentDate = new Date();
-        var timeDiff = Math.abs(currentDate - startDate);
-        var seconds = Math.floor(timeDiff / 1000);
-        var minutes = Math.floor(seconds / 60);
-        var hours = Math.floor(minutes / 60);
-        var days = Math.floor(hours / 24);
-        var months = Math.floor(days / 30.436875); // Average number of days in a month
-        var years = Math.floor(months / 12);
+  function startTimer() {
+    var startDate = new Date();
+    setInterval(function() {
+      var currentDate = new Date();
+      var timeDiff = Math.abs(currentDate - startDate);
+      var seconds = Math.floor(timeDiff / 1000);
+      var minutes = Math.floor(seconds / 60);
+      var hours = Math.floor(minutes / 60);
+      var days = Math.floor(hours / 24);
+      var months = Math.floor(days / 30.436875); // Average number of days in a month
+      var years = Math.floor(months / 12);
 
-        document.getElementById('timer').textContent = years + " anos, " + months % 12 + " meses, " + days % 30.436875 + " dias, " + hours % 24 + " horas";
-      }, 1000);
-    }
-  </script>
+      var remainingSeconds = seconds % 60;
+      var remainingMinutes = minutes % 60;
+
+      var timerText = years + " anos, " + months % 12 + " meses, " + days % 30.436875 + " dias, " + hours % 24 + " horas, " + remainingMinutes + " minutos, " + remainingSeconds + " segundos";
+
+      document.getElementById('timer').textContent = timerText;
+    }, 1000);
+  }
+</script>
 </head>
 <body>
   <div class="container">
